<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, JNItestActivity!</string>
    <string name="app_name">JNItest</string>
    <string name="askNumbers">Input the numbers </string>
    <string name="input">Input</string>
    <string name="ok">OK</string>
    <string name="multi">Multiply</string>
    <string name="sum">Sum</string>
    <string name="div">Division</string>
    <string name="dif">Difference</string>
    <string name="calcu">Calculator</string>
</resources>
